--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <title>WisePops Frontend test</title>
+  <meta charset="UTF-8">
+  <title>WisePops Frontend Test</title>
 </head>
+
 <body>
-    <div id="root"></div>
-    <script src="./src/index.js"></script>
+  <div id="root"></div>
+  <script src="./src/index.js"></script>
 </body>
+
 </html>
