--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>WisePops Frontend Test</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <title>WisePops Frontend Test</title>
-</head>
-
-<body>
-  <div id="root"></div>
-  <script src="./src/index.tsx"></script>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
