--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>WisePops Frontend Test</title>
   </head>
-
   <body>
     <div id="root"></div>
+    <script src="demo.js"></script>
   </body>
 </html>
