added some last changes for the umd bundle

--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>WisePops Frontend Test</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
   </head>
-
   <body>
+    <h1>Hello</h1>
     <div id="root"></div>
-    <script src="./src/index.tsx"></script>
   </body>
+  <script>
+    (function() {
+      const scriptElement = document.createElement('script');
+      scriptElement.src = 'http://localhost:8080/dist/demo.js';
+      scriptElement.onload = function() {
+        WisePops.start();
+      };
+      document.body.appendChild(scriptElement);
+    })();
+  </script>
 </html>
